--- a/x-pack/elastic-agent/spec/endpoint.yml
+++ b/x-pack/elastic-agent/spec/endpoint.yml
@@ -38,6 +38,18 @@ rules:
     values:
     - true
 
+- select_into:
+    selectors: [fleet.access_api_key, fleet.kibana]
+    path: fleet.api
+
+- map:
+    path: fleet
+    rules:
+    - remove_key:
+        key: access_api_key
+    - remove_key:
+        key: kibana
+
 - filter:
     selectors:
     - fleet
