--- a/x-pack/filebeat/module/microsoft/_meta/fields.yml
+++ b/x-pack/filebeat/module/microsoft/_meta/fields.yml
@@ -1,5 +1,10 @@
 - key: microsoft
-  title: Microsoft DHCP
+  title: Microsoft
   description: >
-    microsoft fields.
+    Microsoft Module
   fields:
+    - name: microsoft
+      type: group
+      description: >
+        Fields from Microsoft ATP
+      fields:
