--- a/x-pack/metricbeat/metricbeat.reference.yml
+++ b/x-pack/metricbeat/metricbeat.reference.yml
@@ -543,7 +543,7 @@ metricbeat.modules:
 
 - module: googlecloud
   metricsets:
-    - stackdriver
+    - metrics
   project_id: "your project id"
   credentials_file_path: "your JSON credentials file path"
   exclude_labels: false
