[metricbeat] add state_statefulset in metricbeat k8s recommended config (#17627)
* [metricbeat] add state_statefulset in metricbeat k8s recommended config

* [metricbeat] update changelog.next

Co-authored-by: Chris Mark <chrismarkou92@gmail.com>

--- a/deploy/kubernetes/metricbeat-kubernetes.yaml
+++ b/deploy/kubernetes/metricbeat-kubernetes.yaml
@@ -234,6 +234,7 @@ data:
         - state_container
         - state_cronjob
         - state_resourcequota
+        - state_statefulset
         # Uncomment this to get k8s events:
         #- event
       period: 10s
