--- a/x-pack/filebeat/filebeat.reference.yml
+++ b/x-pack/filebeat/filebeat.reference.yml
@@ -718,7 +718,7 @@ filebeat.modules:
     # var.initial_interval: 24h
     # var.http_client_timeout: 60s
     # var.user_key: all
-    # var.interval: 5s
+    # var.interval: 2h
   user_accounts:
     enabled: true
     # var.jwt_file: credentials.json
@@ -726,7 +726,7 @@ filebeat.modules:
     # var.initial_interval: 24h
     # var.http_client_timeout: 60s
     # var.user_key: all
-    # var.interval: 5s
+    # var.interval: 2h
   login:
     enabled: true
     # var.jwt_file: credentials.json
@@ -734,7 +734,7 @@ filebeat.modules:
     # var.initial_interval: 24h
     # var.http_client_timeout: 60s
     # var.user_key: all
-    # var.interval: 5s
+    # var.interval: 2h
   admin:
     enabled: true
     # var.jwt_file: credentials.json
@@ -742,7 +742,7 @@ filebeat.modules:
     # var.initial_interval: 24h
     # var.http_client_timeout: 60s
     # var.user_key: all
-    # var.interval: 5s
+    # var.interval: 2h
   drive:
     enabled: true
     # var.jwt_file: credentials.json
@@ -750,7 +750,7 @@ filebeat.modules:
     # var.initial_interval: 24h
     # var.http_client_timeout: 60s
     # var.user_key: all
-    # var.interval: 5s
+    # var.interval: 2h
   groups:
     enabled: true
     # var.jwt_file: credentials.json
@@ -758,7 +758,7 @@ filebeat.modules:
     # var.initial_interval: 24h
     # var.http_client_timeout: 60s
     # var.user_key: all
-    # var.interval: 5s
+    # var.interval: 2h
 
 #------------------------------- HAProxy Module -------------------------------
 - module: haproxy
