--- a/x-pack/filebeat/module/gsuite/_meta/config.yml
+++ b/x-pack/filebeat/module/gsuite/_meta/config.yml
@@ -6,7 +6,7 @@
     # var.initial_interval: 24h
     # var.http_client_timeout: 60s
     # var.user_key: all
-    # var.interval: 5s
+    # var.interval: 2h
   user_accounts:
     enabled: true
     # var.jwt_file: credentials.json
@@ -14,7 +14,7 @@
     # var.initial_interval: 24h
     # var.http_client_timeout: 60s
     # var.user_key: all
-    # var.interval: 5s
+    # var.interval: 2h
   login:
     enabled: true
     # var.jwt_file: credentials.json
@@ -22,7 +22,7 @@
     # var.initial_interval: 24h
     # var.http_client_timeout: 60s
     # var.user_key: all
-    # var.interval: 5s
+    # var.interval: 2h
   admin:
     enabled: true
     # var.jwt_file: credentials.json
@@ -30,7 +30,7 @@
     # var.initial_interval: 24h
     # var.http_client_timeout: 60s
     # var.user_key: all
-    # var.interval: 5s
+    # var.interval: 2h
   drive:
     enabled: true
     # var.jwt_file: credentials.json
@@ -38,7 +38,7 @@
     # var.initial_interval: 24h
     # var.http_client_timeout: 60s
     # var.user_key: all
-    # var.interval: 5s
+    # var.interval: 2h
   groups:
     enabled: true
     # var.jwt_file: credentials.json
@@ -46,4 +46,4 @@
     # var.initial_interval: 24h
     # var.http_client_timeout: 60s
     # var.user_key: all
-    # var.interval: 5s
+    # var.interval: 2h
