[Elastic Agent] Add event.dataset to all events (#20076)
* Inject add_fields event.dataset along side dataset.

* Add event.dataset to all published events.

* Add changelog.

--- a/x-pack/elastic-agent/pkg/agent/program/testdata/enabled_output_true-filebeat.yml
+++ b/x-pack/elastic-agent/pkg/agent/program/testdata/enabled_output_true-filebeat.yml
@@ -12,6 +12,10 @@ filebeat:
             type: logs
             name: generic
             namespace: default
+      - add_fields:
+          target: "event"
+          fields:
+            dataset: generic
 output:
   elasticsearch:
     enabled: true
