fix: update the display name of the multibranch job (#20265)

--- a/.ci/jobs/beats.yml
+++ b/.ci/jobs/beats.yml
@@ -1,7 +1,7 @@
 ---
 - job:
     name: Beats/beats
-    display-name: 'Beats (replacement)'
+    display-name: 'Beats'
     description: 'Beats Main Pipeline'
     view: Beats
     concurrent: true
