--- a/x-pack/metricbeat/metricbeat.reference.yml
+++ b/x-pack/metricbeat/metricbeat.reference.yml
@@ -340,7 +340,8 @@ metricbeat.modules:
   period: 300s
   application_id: ''
   api_key: ''
-
+  metrics:
+    - id: ["requests/count", "requests/duration"]
 
 #--------------------------------- Beat Module ---------------------------------
 - module: beat
