--- a/x-pack/elastic-agent/pkg/agent/program/testdata/constraints_config.yml
+++ b/x-pack/elastic-agent/pkg/agent/program/testdata/constraints_config.yml
@@ -24,7 +24,7 @@ inputs:
   - type: apache/metrics
     constraints:
       - "validate_version(%{[agent.version]}, '1.0.0 - 7.0.0')"
-    dataset.namespace: testing
+    data_stream.namespace: testing
     streams:
       - enabled: true
         metricset: info
