--- a/x-pack/elastic-agent/spec/filebeat.yml
+++ b/x-pack/elastic-agent/spec/filebeat.yml
@@ -49,11 +49,11 @@ rules:
     - remove_key:
         key: use_output
     - remove_key:
-        key: dataset
+        key: data_stream
     - remove_key:
-        key: dataset.namespace
+        key: data_stream.namespace
     - remove_key:
-        key: dataset.name
+        key: data_stream.dataset
 
 - filter_values:
     selector: inputs
