--- a/x-pack/elastic-agent/pkg/agent/program/testdata/endpoint_no_fleet.yml
+++ b/x-pack/elastic-agent/pkg/agent/program/testdata/endpoint_no_fleet.yml
@@ -16,7 +16,7 @@ inputs:
   package:
     name: endpoint
     version: 0.3.0
-  dataset:
+  data_stream:
     namespace: default
   artifact_manifest:
     schema_version: v22
