--- a/x-pack/elastic-agent/pkg/agent/program/testdata/endpoint_unknown_output.yml
+++ b/x-pack/elastic-agent/pkg/agent/program/testdata/endpoint_unknown_output.yml
@@ -21,7 +21,7 @@ inputs:
   package:
     name: endpoint
     version: 0.3.0
-  dataset:
+  data_stream:
     namespace: default
   artifact_manifest:
     schema_version: v22
