fix event.type have incorrect value in system/syslog (#20390)
event.type was being set to event.  event is not one of the allowed
values for event.type in ECS.  Changing field to event.kind, where
event is an allowed value.

Closes #20365

--- a/filebeat/module/system/syslog/ingest/pipeline.yml
+++ b/filebeat/module/system/syslog/ingest/pipeline.yml
@@ -52,7 +52,7 @@ processors:
 - remove:
     field: system.syslog.timestamp
 - set:
-    field: event.type
+    field: event.kind
     value: event
 on_failure:
 - set:
