Fix fortinet.firewall.mem value to be interpreted as integer (#19335)
Fix fortinet.firewall.mem value to be interpreted as integer. Add convert processor for fortinet.firewall.mem to ingest pipeline.

Closes #19327

Co-authored-by: Andrew Kroh <andrew.kroh@elastic.co>

--- a/x-pack/filebeat/module/fortinet/firewall/_meta/fields.yml
+++ b/x-pack/filebeat/module/fortinet/firewall/_meta/fields.yml
@@ -1126,7 +1126,7 @@
             Fabric medium count
 
         - name: mem
-          type: keyword
+          type: integer
           description: >
             Memory usage system statistics
 
